# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\CsvController;
 use App\Http\Controllers\KmlController;
 use App\Http\Controllers\AreaController;
+use App\Http\Controllers\EcPoiController;
 use App\Http\Controllers\RegionController;
 use App\Http\Controllers\SectorController;
 use App\Http\Controllers\GeojsonController;
@@ -13,6 +14,7 @@ use App\Http\Controllers\ItineraryController;
 use App\Http\Controllers\ShapeFileController;
 use App\Http\Resources\HikingRouteTDHResource;
 use App\Http\Controllers\HikingRouteController;
+use App\Http\Controllers\SourceSurveyController;
 use App\Http\Controllers\V1\HikingRoutesRegionControllerV1;
 /*
 |--------------------------------------------------------------------------
@@ -65,8 +67,16 @@ Route::prefix('v2')->group(function () {
     Route::get('/hiking-routes-collection/bb/{bounding_box}/{sda}', [HikingRouteController::class, 'collectionByBoundingBox'])->name('v2-hr-collection-by-bb');
     Route::get('/itinerary/list', [ItineraryController::class, 'index'])->name('v2-itinerary-list');
     Route::get('/itinerary/{id}', [ItineraryController::class, 'show'])->name('v2-itinerary-id');
-    Route::get('/ecpois/bb/{bounding_box}/{type}', [EcPoiController::class, 'ecPoisBBox'])->name('v2-ecpois-by-bb');
-    Route::get('/ecpois/{hr_osm2cai_id}/{type}', [EcPoiController::class, 'ecPoisByOsm2CaiId'])->name('v2-ecpois-by-osm2caiId');
-    Route::get('/ecpois/{hr_osm_id}/{type}', [EcPoiController::class, 'ecPoisByOsmId'])->name('v2-ecpois-by-OsmId');
-    Route::get('/source_survey/overlay.geojson', [SourceSurveyController::class, 'overlayGeoJson'])->name('v2-source-survey-overlay-geojson');
+    Route::get('/ecpois/bb/{bounding_box}/{type}', [EcPoiController::class, 'indexByBoundingBox'])->name('v2-ecpois-by-bb');
+    Route::get('/ecpois/{hr_osm2cai_id}/{type}', [EcPoiController::class, 'indexByBufferFromHikingRouteId'])->name('v2-ecpois-by-osm2caiId');
+    Route::get('/ecpois/{hr_osm_id}/{type}', [EcPoiController::class, 'indexByBufferFromHikingRouteOsmId'])->name('v2-ecpois-by-OsmId');
+
+    //ACQUA SORGENTE
+    Route::prefix('source_survey')->name('source-survey.')->group(function () {
+        Route::get('/survey.geojson', [SourceSurveyController::class, 'surveyGeoJson'])->name('survey-geojson');
+        Route::get('/survey.gpx', [SourceSurveyController::class, 'surveyGpx'])->name('survey-gpx');
+        Route::get('/survey.kml', [SourceSurveyController::class, 'surveyKml'])->name('survey-kml');
+        Route::get('/survey.shp', [SourceSurveyController::class, 'surveyShapefile'])->name('survey-shapefile');
+        Route::get('/overlay.geojson', [SourceSurveyController::class, 'overlayGeoJson'])->name('overlay-geojson');
+    });
 });
